--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-  },
   "devDependencies": {
     "@astrojs/image": "^0.7.0",
     "@astrojs/mdx": "^0.11.1",
     "@astrojs/tailwind": "^2.0.0",
     "@tailwindcss/typography": "^0.5.7",
-    "astro": "^1.2.4"
+    "astro": "^1.2.4",
+    "astro-icon": "^0.7.3"
   }
 }
